# flightboard

./: .clang-format  .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  perf.data  perf.data.old  sdl_gpu_guide.md
.zed/: debug.json  settings.json  tasks.json
content/: flight_boundary.txt  no_fly_zones.txt
content/models/floatplane/: floatplane.mtl
content/models/tb2/: tb2.mtl
content/shaders/: color.frag.hlsl  debug_color.frag.hlsl  indicator_color.frag.hlsl  lighting_basic.frag.hlsl  lighting_basic.vert.hlsl  position_color.vert.hlsl  spinning_cube.vert.hlsl
src/: app.cpp  app.hpp  camera.hpp  components.hpp  culling.hpp  device.hpp  example.cpp  flight_boundary.cpp  flight_boundary.hpp  gpu.hpp  hello.c  imgui_layer.cpp  imgui_layer.hpp  indicator_model.hpp  indicator_model_loader.hpp  lru_cache.hpp  main.cpp  map.hpp  math.hpp  mesh_manager.hpp  model.hpp  no_fly_zones.cpp  no_fly_zones.hpp  obj_loader.hpp  quadtree.hpp  ros.cpp  ros.hpp  sensor_combined_listener.hpp  texture_manager.hpp  tile_generator.hpp  tile_manager.hpp  time.hpp  utils.hpp  window.hpp
src/gpu/: allocator.hpp  device.hpp  pipeline.hpp  render_context.hpp  renderer.cpp  renderer.hpp  sampler.hpp
tools/azure_map_downloader/: azure_map_downloader.py  check_corrupted.py  download_eskisehir.sh  download_global.sh  requirements.txt
tools/cesium_map_downloader/: download_image.py
